# JacPRIM

./: .gitignore  README.md  bfs.jac  hist.jac  kmeans.jac  log_reg.jac  red.jac  scan.jac
.devcontainer/: Dockerfile  devcontainer.json
analytical/littlex/: main.py
analytical/pagerank/: prepare_data.py
analytical/partitioner/: __init__.py
bfs/: .gitignore  CMakeLists.txt  bfs.jac  compile_commands.json
bfs/dpu/: CMakeLists.txt  dpu_program.dpu  task.c
bfs/host/: CMakeLists.txt  app.cpp  cpu_bfs.cpp  cpu_bfs.h  host_app
bfs/support/: common.h
bs/: bs.jac
hist/: CMakeList.txt  CMakeLists.txt  hist.jac
hist/dpu/: task.c
hist/host/: CMakeList.txt  CMakeLists.txt  app.c
hist/support/: common.h
lin_reg/: lin_reg.jac
log_reg/: log_reg.jac
prototype/: CMakeLists.txt  compile_commands.json
prototype/host/: CMakeLists.txt  app.cpp
prototype/host/graph/: generator.cpp  generator.h  graph_cut.cpp  graph_cut.h
prototype/support/: common.h
red/: red.jac
scan/: scan-rss.jac
